Fix link to TANTAN and add descriptions

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Full Motion</title>
+		<title>Denise Portfolio | Home</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -42,6 +42,7 @@
 									<h3>UBC Tantan</h3>
 									<p>UBC Tantan is a social networking web application that allows users to post, like, comment, add friends, and chat in groups</p>
 									<a href="tantan.html" class="button fit">More</a>
+									
 								</div>
 							</div>
 						</div>
