--- a/tantan.html
+++ b/tantan.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>UBC Tantan</title>
+		<title>Denise Portfolio | Tantan</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,19 +35,17 @@
                     
 					<div class="inner">
                         <!-- Return button -->
-                        <a href="./index.html" class="button fit style2">Home</a>
+                        <a href="index.html" class="button fit style2">Home</a>
 					<!-- Boxes -->
 						<div>
 
 							<img class="image fit" src="images/Tantan.png" alt="" />
 							<ul>
-                                <li>a</li>
-                                <li>a</li>
-                                <li>a</li>
-                                <li>a</li>
+                                <li>Developed in a team of four a fully featured social networking web application that allows UBC students to interact with each other</li>
+                                <li>Features: edit profiles, add time table, share/like/comment/save/hide posts, add/block friends, direct message, group chat, backend monitoring, and friend recommendations (Details can be found in <a href="https://github.com/ZijiaZhang/CPSC436_Project#cpsc436-group-project">README</a>)</li>
+                                <li>Implemented RESTful APIs with Express and wrote unit tests that had over 80% code coverage</li>
+                                <li>Designed database schema and mongoose model interfaces which allows frontend and backend to share the same model interfaces</li>
                             </ul>
-									<!-- <h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p> -->
 						</div>
 					</div>
 				</div>
