--- a/superRent.html
+++ b/superRent.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Denise Portfolio | Tantan</title>
+		<title>Denise Portfolio | SuperRent</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,10 +22,9 @@
                 <section id="banner" src="images/banner">
 					<div class="inner">
 						<header>
-                            <h1>UBC Tantan</h1>
-                            <h3>May-Aug 2020</h3>
-                            <a href="https://github.com/ZijiaZhang/CPSC436_Project">GitHub Repository</a><br />
-                            <a href="https://ubctantan.duckdns.org">View App</a>
+                            <h1>SuperRent</h1>
+                            <h3>Oct-Nov 2019</h3>
+                            <a href="https://github.com/shirleyyxw/SuperRent">GitHub Repository</a>
 						</header>
 						<a href="#main" class="more">Learn More</a>
 					</div>
@@ -39,15 +38,14 @@
                         <a href="index.html" class="button fit style2">Home</a>
 					<!-- Boxes -->
 						<div>
-
-							<img class="image fit" src="images/Tantan.png" alt="" />
 							<ul>
-                                <li>Developed in a team of four a fully featured social networking web application that allows UBC students to interact with each other</li>
-                                <li>Features: edit profiles, add time table, share/like/comment/save/hide posts, add/block friends, direct message, group chat, backend monitoring, and friend recommendations (Details can be found in <a href="https://github.com/ZijiaZhang/CPSC436_Project#cpsc436-group-project">README</a>)</li>
-                                <li>Implemented RESTful APIs with Express and wrote unit tests that had over 80% code coverage</li>
-                                <li>Designed database schema and mongoose model interfaces which allows frontend and backend to share the same model interfaces</li>
-                                <li>Technologies: React, Redux, TypeScript, Node, Express, MongoDB, Mongoose</li>
+                                <li>Collaborated in a team of three to develop a database system for car rental company</li>
+                                <li>Designed database schemas by creating an Entity-Relationship Diagram with respect to transaction requirements</li>
+                                <li>Implemented a terminal-based application for querying with embedded SQL using JDBC</li>
+                                <li>Technologies: Java, JDBC, SQL, Oracle</li>
+                                <li>ER Diagram:</li>
                             </ul>
+                            <img class="image fit" src="images/SuperRentDiagram.png" alt="ERDiagram" />
 						</div>
 					</div>
 				</div>
