--- a/scheduler.html
+++ b/scheduler.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Denise Portfolio | SuperRent</title>
+		<title>Denise Portfolio | Shift Scheduler</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,9 +22,9 @@
                 <section id="banner" src="images/banner">
 					<div class="inner">
 						<header>
-                            <h1>SuperRent</h1>
-                            <h3>Oct-Nov 2019</h3>
-                            <a href="https://github.com/shirleyyxw/SuperRent">GitHub Repository</a>
+                            <h1>Shift Scheduler</h1>
+                            <h3>May-Jun 2019</h3>
+                            <a href="https://github.com/xddenise/Scheduler">GitHub Repository</a><br />
 						</header>
 						<a href="#main" class="more">Learn More</a>
 					</div>
@@ -39,13 +39,16 @@
 					<!-- Boxes -->
 						<div>
 							<ul>
-                                <li>Collaborated in a team of three to develop a database system for car rental company</li>
-                                <li>Designed database schemas by creating an Entity-Relationship Diagram with respect to transaction requirements</li>
-                                <li>Implemented a terminal-based application for querying with embedded SQL using JDBC</li>
-                                <li>Technologies: Java, JDBC, SQL, Oracle</li>
-							</ul>
-							<h4>ER Diagram:</h4>
-                            <img class="image" src="images/SuperRentDiagram.png" alt="ERDiagram" />
+                                <li>Developed a shift scheduling algorithm for Mr.Mustache Bubble Tea Shop, which was approved by the manager to reduce scheduling time for two store locations by 95%</li>
+                                <li>Implemented a Java program that takes employees’ weekly availability in a JSON file and produces a text file of shift schedule</li>
+                                <li>Designed to increase employer and employees’ satisfaction by utilizing multiple modified priority queues</li>
+                                <li>Structured to include additional features such as multiple store locations, employees’ desired number of shifts, choice of fixing a shift, removing consecutive shifts</li>
+                                <li>Technologies: Java</li>
+                            </ul>
+                            <h4>Example input: (Taken from <a href="https://github.com/xddenise/Scheduler/blob/master/src/files/DataFile">here</a>)</h4>
+                            <img class="image" src="images/schedulerInput.png" alt="input" />
+                            <h4>Example output: (Taken from <a href="https://github.com/xddenise/Scheduler/blob/master/src/files/output.txt">here</a>)</h4>
+                            <img class="image" src="images/schedulerOutput.png" alt="input" />
 						</div>
 					</div>
 				</div>
