Add images and update color filler page

--- a/colorFiller.html
+++ b/colorFiller.html
@@ -37,12 +37,26 @@
                         <a href="index.html" class="button fit style2">Home</a>
 					<!-- Boxes -->
 						<div>
-                            <h2>PAGE IN PROGRESS</h2>
 							<ul>
-                                <li>Developed a program that shows the art effect of filling the image colour with different order by producing a GIF of the process</li>
+                                <li>Developed a program that shows the art effect of filling the image colour by producing a GIF of the process</li>
                                 <li>Created several colour fillers using breath first search and depth first search</li>
                                 <li>Technologies: C++, GDB, Valgrind</li>
                             </ul>
+                            <h4>Fill with single color: BFS vs. DFS</h4>
+                            <img src="images/bfsborder.gif" class="image" alt="" />
+                            <img src="images/dfsborder.gif" class="image" alt="" />
+
+                            <h4>Fill with rainbow color: BFS vs. DFS</h4>
+                            <img src="images/bfsrain.gif" class="image" alt="" />
+                            <img src="images/dfsrain.gif" class="image" alt="" />
+
+                            <h4>Fill with stripes: BFS vs. DFS</h4>
+                            <img src="images/bfsstripe.gif" class="image" alt="" />
+                            <img src="images/dfsstripe.gif" class="image" alt="" />
+
+                            <h4>Fill with gradient: BFS vs. DFS</h4>
+                            <img src="images/customBFS.gif" class="image" alt="" />
+                            <img src="images/customDFS.gif" class="image" alt="" />
 						</div>
 					</div>
 				</div>
