--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							</div>
 
 							<div class="box">
-								<img src="images/schedule.jpg" class="image fit" alt="" />
+								<img src="images/bfsstripe.png" class="image" alt="" />
 								<div class="inner">
 									<h3>Color Filler</h3>
 									<h5>Feb 2019</h5>
