Add pictures to mentorship, compression, and filler

--- a/compression.html
+++ b/compression.html
@@ -37,14 +37,22 @@
                         <a href="index.html" class="button fit style2">Home</a>
 					<!-- Boxes -->
 						<div>
-                            <h2>PAGE IN PROGRESS</h2>
 							<ul>
                                 <li>Implemented an algorithm that compresses variability of a png image to produce a pixelated image</li>
                                 <li>Stored image pixels in a modified version of quad tree data structure</li>
-                                <li>Automated the process of adding mosaic to an image by deleting a node of pixels, where colour of all deleted pixels are within the colour tolerance of parent</li>
+                                <li>Automated the process of compressing an image by deleting a node of pixels, where colour of all deleted pixels are within the colour tolerance of parent</li>
                                 <li>Compiled using makefile through remote server and tested memory leak with valgrind</li>
                                 <li>Technologies: C++, GDB, Valgrind</li>
-                            </ul>
+							</ul>
+							
+							<h4>Original photo:</h4>
+							<img src="images/ada.png" class="image" alt="" />
+							<h4>0.02 tolerance:</h4>
+							<img src="images/ada_0.02.png" class="image" alt="" />
+							<h4>0.1 tolerance:</h4>
+							<img src="images/ada_0.1.png" class="image" alt="" />
+							<h4>0.2 tolerance:</h4>
+							<img src="images/ada_0.2.png" class="image" alt="" />
 						</div>
 					</div>
 				</div>
