--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							</div>
 
 							<div class="box">
-								<img src="images/schedule.jpg" class="image fit" alt="" />
+								<img src="images/mentorship.jpg" class="image fit" alt="" />
 								<div class="inner">
 									<h3>Mentorship Search</h3>
 									<h5>Jul 2019</h5>
@@ -77,7 +77,7 @@
 							</div>
 
 							<div class="box">
-								<img src="images/schedule.jpg" class="image fit" alt="" />
+								<img src="images/ada_crop.png" class="image fit" alt="" />
 								<div class="inner">
 									<h3>Art of Compression</h3>
 									<h5>Mar 2019</h5>
@@ -87,11 +87,11 @@
 							</div>
 
 							<div class="box">
-								<img src="images/bfsstripe.png" class="image" alt="" />
+								<img src="images/bfsstripe.png" class="image fit" alt="" />
 								<div class="inner">
 									<h3>Color Filler</h3>
 									<h5>Feb 2019</h5>
-									<p>Developed a program that shows the art effect of filling the image color with different order by producing a GIF of the process</p>
+									<p>Developed a program that shows the process filling the image with different color effects by producing a GIF</p>
 									<a href="colorFiller.html" class="button fit style3">More</a>
 								</div>
 							</div>
