Add resume and delete files

--- a/superRent.html
+++ b/superRent.html
@@ -56,7 +56,8 @@
 						<ul class="icons">
 							<li><a href="http://www.linkedin.com/in/danhe-xu-denise" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
                             <li><a href="http://www.github.com/xddenise" class="icon fa-github"><span class="label">GitHub</span></a></li>
-                            <li><a href="mailto:dhxxu@outlook.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="mailto:dhxxu@outlook.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="./pdfs/Denise_Xu_Resume_v7.pdf" class="icon fa-file"><span class="label">Resume</span></a></li>
 						</ul>
 						<p class="copyright">&copy; Denise Xu 2020. Design: <a href="https://templated.co">TEMPLATED</a>.</p>
 					</div>
